# python-project-50

./: Makefile  README.md  gendiff_flat_files.cast  pyproject.toml
.github/workflows/: project-check .yml
gendiff/: diff.py  parser.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
