[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Second educational project"
authors = ["flamulus <flamulus@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/Flamulus/python-project-50"
packages = [
  { include = "gendiff" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
	"Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
flake8 = "^7.1.1"
asciinema = "^2.4.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
